added SHA1 as a checksum type

--- a/getsumChecksums/app.config
+++ b/getsumChecksums/app.config
@@ -10,6 +10,9 @@
             <setting name="lastPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="hashType" serializeAs="String">
+                <value />
+            </setting>
         </getsumChecksums.Properties.Settings>
     </userSettings>
 </configuration>
