--- a/getsumChecksums/Properties/Settings.settings
+++ b/getsumChecksums/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="lastPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="hashType" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
